--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -12,7 +12,7 @@
         font-size: 18px;
       }
     </style>
-    <link rel="style.css" type="stylesheet"/>
+    <link href="style.css" rel="stylesheet"/>
   </head>
   <body>
     <div>Style me via the external method!</div>
